# bistoury

./: .gitignore  .pre-commit-config.yaml  CANDLE_FIX_SUMMARY.md  DATABASE_COMPATIBILITY.md  README.md  README_PAPER_TRADING.md  RECONNECTION_SUMMARY.md  SPEED_OPTIMIZATION_GUIDE.md  TASK_6_2_SUMMARY.md  TASK_6_4_SUMMARY.md  WEBSOCKET_RECONNECTION.md  activate_venv.sh  analyze_optimization_stages.py  check_db.py  check_schema.py  explore_hyperliquid_api.py  pyproject.toml  quick_test_reconnection.py  requirements.txt  run_multi_stage_optimization.py  run_paper_trading_max_speed.py  run_paper_trading_test.py  run_production_paper_trading.py  test_database_compatibility.py  test_database_switcher.py  test_db_setup.py  test_duckdb_features.py  test_handler_execution.py  test_schema_implementation.py  test_setup.py  test_websocket_reconnection.py
.cursor/rules/: dev_workflow.mdc
.taskmaster/: config.json
.taskmaster/docs/: prd.txt
config/: README.md  agents.json  index.json  pattern_detection.json  strategy.json  trading.json
docs/: SIGNAL_MANAGER_IMPLEMENTATION_GUIDE.md  TASK_11_SUMMARY.md  TASK_13_UPDATED_APPROACH.md  TASK_6_3_FIXES_SUMMARY.md  TASK_8_5_SUMMARY.md  TASK_8_7_SUMMARY.md  TASK_8_8_SUMMARY.md  TASK_8_9_SUMMARY.md  TASK_9_1_2_3_SUMMARY.md  TASK_9_2_SUMMARY.md  TASK_9_4_SUMMARY.md  candlestick_strategy.md
examples/: base_agent_demo.py  candlestick_strategy_demo.py  collector_agent_demo.py  market_simulator_demo.py  paper_trading_demo.py  position_manager_demo.py
scripts/: test_market_data_models.py
src/bistoury/: __init__.py  __main__.py  cli.py  config.py  config_manager.py  logger.py
src/bistoury/agents/: __init__.py  base.py  candlestick_strategy_agent.py  collector_agent.py  messaging.py  orchestrator.py  position_manager_agent.py  registry.py  signal_manager_agent.py
src/bistoury/backtesting/: backtest_engine.py  optimizer.py
src/bistoury/cli/: __init__.py  commands.py
src/bistoury/cli_commands/: __init__.py  backtest.py  collector.py  optimize.py
src/bistoury/database/: __init__.py  backup.py  compression.py  connection.py  database_switcher.py  indices.py  schema.py
src/bistoury/hyperliquid/: __init__.py  client.py  collector.py
src/bistoury/models/: __init__.py  agent_messages.py  agent_registry.py  api_responses.py  database.py  market_data.py  orchestrator_config.py  orderbook.py  serialization.py  signals.py  strategies.py  trades.py  trading.py  websocket.py
src/bistoury/paper_trading/: config.py  (+5 more)
tasks/: tasks.json
tests/: README.md  __init__.py  conftest.py  run_tests.py
tests/e2e/: test_hyperliquid_complete.py
tests/integration/: test_candlestick_strategy_integration.py  test_historical_replay.py  test_hyperliquid_integration.py
tests/unit/: test_agent_registry.py  test_api_response_models.py  test_base_agent.py  test_candlestick_models.py  test_candlestick_strategy_agent.py  test_collector_agent.py  test_config.py  test_database.py  test_database_models.py  test_database_schema_compression_backup.py  test_enhanced_collector.py  test_market_data_models.py  test_market_simulator.py  test_messaging.py  test_multi_patterns.py  test_narrative_generation.py  test_narrative_preservation.py  test_orchestrator.py  test_orderbook_models.py  test_pattern_scoring.py  test_position_manager_agent.py  test_position_manager_analytics.py  test_signal_aggregation.py  test_signal_generation.py  test_signal_manager_agent.py  test_signal_manager_core.py  test_signal_manager_models.py  test_signal_models.py  test_single_patterns.py  test_timeframe_analysis.py  test_trades_models.py  test_trading_models.py  test_websocket_models.py
(+19 files in other folders)
